# MyWhoosh2Garmin

./: myWhoosh2Garmin.py  pyproject.toml
.github/workflows/: run.yml
